--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,23 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+
+::-webkit-scrollbar {
+  width: 10px !important;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f3f3f3 !important;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #8A3029 !important;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #D7554A !important;
+}
