--- a/src/app.css
+++ b/src/app.css
@@ -52,4 +52,12 @@ body {
 }
 }
 
+.story {
+  width: 100%;
+  height: 100%;
+  display: none !important;
+}
 
+.story.active {
+  display: flex !important;
+}
