--- a/src/app.css
+++ b/src/app.css
@@ -1,63 +1,70 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
 body {
+	background-color: #e5c2c0;
+	overflow-x: hidden;
+}
 
-  background-color: #E5C2C0;
-  overflow-x: hidden;
+.title {
+	font-size: 2.5rem;
+	font-weight: 700;
+	margin-bottom: 1rem;
+}
+
+.subtitle {
+	font-size: 1.25rem;
+	color: #333;
 }
 
 ::-webkit-scrollbar {
-  width: 10px !important;
+	width: 10px !important;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f3f3f3 !important;
+	background: #f3f3f3 !important;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #8A3029 !important;
+	background: #8a3029 !important;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #D7554A !important;
+	background: #d7554a !important;
 }
 
-.window{
-  width: 100% !important;
-  
+.window {
+	width: 100% !important;
 }
 
 @media (max-width: 768px) {
-  .steps__label {
-    display: none;
-  }
-    
-  
+	.steps__label {
+		display: none;
+	}
 }
 
 @layer utilities {
-  /* Hide scrollbar for Chrome, Safari and Opera */
-  .no-scrollbar::-webkit-scrollbar {
-      display: none;
-  }
- /* Hide scrollbar for IE, Edge and Firefox */
-  .no-scrollbar {
-      -ms-overflow-style: none;  /* IE and Edge */
-      scrollbar-width: none;  /* Firefox */
-}
+	/* Hide scrollbar for Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+	/* Hide scrollbar for IE, Edge and Firefox */
+	.no-scrollbar {
+		-ms-overflow-style: none; /* IE and Edge */
+		scrollbar-width: none; /* Firefox */
+	}
 }
 
 .story {
-  width: 100%;
-  height: 100%;
-  display: none !important;
+	width: 100%;
+	height: 100%;
+	display: none !important;
 }
 
 .story.active {
-  display: flex !important;
+	display: flex !important;
 }
