--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,37 @@ body {
 	background-color: #e5c2c0;
 	overflow-x: hidden;
 }
+.fireworks {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 10;
+}
+
+.text-wrapper-center {
+	position: absolute;
+	top: 50%;
+	width: 90%;
+	transform: translateY(-50%);
+	text-align: center;
+}
+
+.text-wrapper-top {
+	width: 90%;
+	position: absolute;
+	top: 10%;
+	left: 50%;
+	transform: translateX(-50%);
+}
+.text-wrapper-bottom {
+	width: 90%;
+	position: absolute;
+	bottom: 10%;
+	left: 50%;
+	transform: translateX(-50%);
+}
 
 .title {
 	font-size: 2.5rem;
