--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,17 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
+
+.correct {
+	background-color: #88D18A;
+	color: #155724;
+}
+
+.incorrect {
+	background-color: #f8d7da;
+	color: #721c24;
+}
+
 body {
 	background-color: #e5c2c0;
 	overflow-x: hidden;
@@ -13,6 +24,10 @@ body {
 	width: 100%;
 	height: 100%;
 	z-index: 10;
+}
+
+.disabled {
+	pointer-events: none;
 }
 
 .text-wrapper-center {
